--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
+    <link rel="stylesheet" href="css/all.css">
  <link rel="stylesheet" href="css/main.css">
  <link rel="stylesheet" href="css/framework.css">
  <link rel="stylesheet" href="css/all.min.css">
@@ -73,6 +74,21 @@
         </ul>
     </div>
     <!-- end sidebar -->
+    <div class="content w-full ">
+<!-- start head -->
+<div class="head bg-white p-15 space-between">
+    <div class="search relative">
+     <input class="p-20 br-10 border-1" type="search" placeholder="Type a Keyword">
+    </div>
+    <div class="icons d-flex align-items">
+<span class="notifications relative">
+    <i class="fa-regular fa-bell fa-lg"></i>
+</span>
+<img src="images/My-Picture.jpeg" alt="">
+    </div>
+</div>
+<!-- end head -->
+</div>
 </div>
 </body>
 </html>
