--- a/index.html
+++ b/index.html
@@ -84,10 +84,42 @@
 <span class="notifications relative">
     <i class="fa-regular fa-bell fa-lg"></i>
 </span>
-<img src="images/My-Picture.jpeg" alt="">
+<img src="imgs/avatar.png" alt="">
     </div>
 </div>
 <!-- end head -->
+<h1 class="relative">Dashboard</h1>
+<div class="wrapper d-grid gap-20">
+    <!-- Start Welcome Widget -->
+    <div class="welcome bg-white br-10 txt-c-mobile block-mobile ">
+        <div class="intro bg-green p-20 d-flex space-between ">
+            <div>
+                <h2 class="m-0 tt-c">welcome</h2>
+                <p class="c-grey mt-5 tt-c">elzero</p>
+            </div>
+                <img src="imgs/welcome.png" class=" hide-mobile " alt="">
+        </div>
+        <img src="imgs/avatar.png" class="avatar" alt="">
+        <div class="body tt-c txt-c d-flex  p-20 mt-20 mb-20 block-mobile ">
+<div class="mt-10">hawraa<span class="d-block c-grey fs-14">developer</span></div>
+<div class="mt-10">10 <span class="d-block c-grey fs-14">project</span></div>
+<div class="mt-10">1000$ <span class="d-block c-grey fs-14">earned</span></div>
+        </div>
+        <a href="profile.html" class="visit d-block fs-14 bg-purple c-white w-fit  btn-shape">profile</a>
+    </div>
+<!-- End Welcome Widget -->
+<!-- Start Quick Draft Widget -->
+<div class="quick-draft p-20 bg-white br-10 tt-c ">
+    <h2 class=" mt-0 mb-10">quick draft</h2>
+    <p class="c-grey mt-0 mb-20 fs-15 ">Write A Draft For Your Ideas</p>
+    <form action="" class="">
+        <input class="d-block br-6 p-10 mb-20 br-none w-full bg-eee" type="text" placeholder="Title">
+        <textarea class="d-block br-6 p-10 mb-20 br-none w-full bg-eee" placeholder="Your Thoughts"></textarea>
+        <input type="submit" value="save" class="save d-block c-white bg-purple br-none w-fit fs-14 btn-shape">
+    </form>
+</div>
+<!-- End Quick Draft Widget -->
+</div>
 </div>
 </div>
 </body>
