--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 <div class="page d-flex ">
     <!-- start sidebar -->
-    <div class="sidebar bg-purple  p-20 relative">
+    <div class="sidebar bg-pink  p-20 relative">
         <div class="logo d-flex relative">
             <i class="fa-solid fa-gauge"></i>
             <h3 class="c-white hide-mobile">Dashboard</h3>
@@ -92,7 +92,7 @@
 <div class="wrapper d-grid gap-20">
     <!-- Start Welcome Widget -->
     <div class="welcome bg-white br-10 txt-c-mobile block-mobile ">
-        <div class="intro bg-green p-20 d-flex space-between ">
+        <div class="intro bg-pink-alt p-20 d-flex space-between ">
             <div>
                 <h2 class="m-0 tt-c">welcome</h2>
                 <p class="c-grey mt-5 tt-c">elzero</p>
@@ -105,7 +105,7 @@
 <div class="mt-10">10 <span class="d-block c-grey fs-14">project</span></div>
 <div class="mt-10">1000$ <span class="d-block c-grey fs-14">earned</span></div>
         </div>
-        <a href="profile.html" class="visit d-block fs-14 bg-purple c-white w-fit  btn-shape">profile</a>
+        <a href="profile.html" class="visit d-block fs-14 bg-pink c-white w-fit  btn-shape">profile</a>
     </div>
 <!-- End Welcome Widget -->
 <!-- Start Quick Draft Widget -->
@@ -113,9 +113,9 @@
     <h2 class=" mt-0 mb-10">quick draft</h2>
     <p class="c-grey mt-0 mb-20 fs-15 ">Write A Draft For Your Ideas</p>
     <form action="" class="">
-        <input class="d-block br-6 p-10 mb-20 br-none w-full bg-eee" type="text" placeholder="Title">
-        <textarea class="d-block br-6 p-10 mb-20 br-none w-full bg-eee" placeholder="Your Thoughts"></textarea>
-        <input type="submit" value="save" class="save d-block c-white bg-purple br-none w-fit fs-14 btn-shape">
+        <input class="d-block br-6 p-10 mb-20 br-none w-full bg-grey" type="text" placeholder="Title">
+        <textarea class="d-block br-6 p-10 mb-20 br-none w-full bg-grey" placeholder="Your Thoughts"></textarea>
+        <input type="submit" value="save" class="save d-block c-white bg-pink br-none w-fit fs-14 btn-shape">
     </form>
 </div>
 <!-- End Quick Draft Widget -->
