--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="search relative">
      <input class="p-20 br-10 border-1" type="search" placeholder="Type a Keyword">
     </div>
-    <div class="icons d-flex align-items">
+    <div class="icons align-center">
 <span class="notifications relative">
     <i class="fa-regular fa-bell fa-lg"></i>
 </span>
@@ -119,6 +119,265 @@
     </form>
 </div>
 <!-- End Quick Draft Widget -->
+<!--Start Targets Widget   -->
+<div class="targets p-20 bg-white br-10 tt-c ">
+    <h2 class=" mt-0 mb-10">Yearly Target</h2>
+    <p class="c-grey mt-0 mb-20 fs-15 ">Targets of the year</p>
+    <!-- 1 -->
+    <div class="target-row mb-20 pink space-between ">
+<div class="icon align-center">
+    <i class=" fa-solid fa-dollar-sign fa-lg c-pink"></i>
+</div>
+<div class="details">
+    <span class="fs-14 c-grey">Money</span>
+    <span class=" d-block mt-5 mb-10 fw-b">$20,000</span>
+    <div class="progress relative">
+<span class="bg-pink pink" style="width: 40%;">
+<span class="bg-pink c-white fs-14 br-6">40%</span>
+</span>
+    </div>
+</div>
+    </div>
+<!-- 2 -->
+<div class="target-row mb-20 blue space-between ">
+    <div class="icon align-center">
+        <i class=" fa-solid fa-dollar-sign fa-lg c-blue"></i>
+    </div>
+    <div class="details">
+        <span class="fs-14 c-grey">Course</span>
+        <span class=" d-block mt-5 mb-10 fw-b">85</span>
+        <div class="progress relative">
+    <span class="bg-blue blue" style="width: 85%;">
+    <span class="bg-blue c-white fs-14 br-6">85%</span>
+    </span>
+        </div>
+    </div>
+        </div>
+<!-- 3 -->
+<div class="target-row mb-20 orange space-between ">
+    <div class="icon align-center">
+        <i class=" fa-solid fa-dollar-sign fa-lg c-orange"></i>
+    </div>
+    <div class="details">
+        <span class="fs-14 c-grey">Team</span>
+        <span class=" d-block mt-5 mb-10 fw-b">15</span>
+        <div class="progress relative">
+    <span class="bg-orange orange " style="width: 15%;">
+    <span class="bg-orange  c-white fs-14 br-6">15%</span>
+    </span>
+        </div>
+    </div>
+        </div>
+</div>
+<!--End Targets Widget  -->
+<!-- Start Tickets Widget  -->
+<div class="tickets p-20 bg-white br-10 tt-c">
+    <h2 class=" mt-0 mb-10">Tickets Statistics</h2>
+    <p class="c-grey mt-0 mb-20 fs-15 ">EveryThing About support Tickets</p>
+    <div class="d-flex gap-20 txt-c f-wrap ">
+        <div class="box c-grey br-10 fs-14 p-20">
+<i class="fa-regular fa-rectangle-list fa-2x mb-10 c-pink "></i>
+<span class="d-block fw-b c-black fs-25 mb-5">2500</span>
+        </div>
+<!--  -->
+        <div class="box c-grey br-10 fs-14 p-20">
+<i class="fa-regular fa-circle-check fa-2x mb-10 c-blue"></i>
+<span class="d-block fw-b c-black fs-25 mb-5">2500</span>
+        </div>
+<!--  -->
+<div class="box c-grey br-10 fs-14 p-20">
+    <i class="fa-solid fa-spinner fa-2x mb-10 c-orange "></i>
+    <span class="d-block fw-b c-black fs-25 mb-5">2500</span>
+            </div>
+ <!--  -->
+        <div class="box tt-c c-grey br-10 fs-14 p-20">
+<i class="fa-regular fa-rectangle-xmark fa-2x mb-10 c-green "></i>
+<span class="d-block fw-b c-black fs-25 mb-5">2500</span>
+        </div>
+    </div>
+</div>
+<!-- End Tickets Widget  -->
+<!--  Start Latest news   -->
+<div class="news p-20 br-10 bg-white tt-c txt-c-mobile">
+
+    <h2 class=" mt-0 mb-10">Latest news</h2>
+<div class="news-row d-flex align-center">
+<img src="imgs/news-01.png" alt="">
+<div class="info">
+    <h3>Team Increase</h3>
+    <p class="m-0 fs-14 c-grey">6 members joined our team</p>
+</div>
+<span class="btn-shape c-white date fs-14 bg-pink">4 hours ago</span>
+</div>
+<div class="news-row d-flex align-center">
+    <img src="imgs/news-02.png" alt="">
+    <div class="info">
+        <h3>Team Increase</h3>
+        <p class="m-0 fs-14 c-grey">6 members joined our team</p>
+    </div>
+    <span class="btn-shape date c-white fs-14 bg-pink">1 days ago</span>
+    </div>
+    <div class="news-row d-flex align-center">
+        <img src="imgs/news-03.png" alt="">
+        <div class="info">
+            <h3>Team Increase</h3>
+            <p class="m-0 fs-14 c-grey">6 members joined our team</p>
+        </div>
+        <span class="btn-shape c-white date fs-14 bg-pink">20 days ago</span>
+        </div>
+        <div class="news-row d-flex align-center">
+            <img src="imgs/news-04.png" alt="">
+            <div class="info">
+                <h3>Team Increase</h3>
+                <p class="m-0 fs-14 c-grey">6 members joined our team</p>
+            </div>
+            <span class="btn-shape c-white date fs-14 bg-pink">3 hours ago</span>
+            </div>
+</div>
+<!--  End Latest news-->
+<!-- Start Tasks Widget -->
+<div class="tasks p-20 br-10 bg-white tt-c ">
+    <h2 class=" mt-0 mb-20">lastet tasks</h2>
+  <div class="task-row d-flex space-between align-center">
+    <div class="info">
+        <h3 class=" mt-0 mb-5 fs-14">record one video</h3>
+        <p class="m-0 mb-5 c-grey">record python create exe project</p>
+    </div>
+    <i class="fa-regular fa-trash-can delete"></i>
+  </div>
+  <div class="task-row d-flex space-between align-center">
+    <div class="info">
+        <h3 class=" mt-0 mb-5 fs-14">write article</h3>
+        <p class="m-0 mb-5 c-grey">write low level vs high level languages</p>
+    </div>
+    <i class="fa-regular fa-trash-can delete"></i>
+  </div>
+  <div class="task-row d-flex space-between align-center">
+    <div class="info">
+        <h3 class=" mt-0 mb-5 fs-14">finish project</h3>
+        <p class="m-0 mb-5 c-grey">publish academy programming project</p>
+    </div>
+    <i class="fa-regular fa-trash-can delete"></i>
+  </div>
+  <div class="task-row d-flex space-between align-center done">
+    <div class="info">
+        <h3 class=" mt-0 mb-5 fs-14">attend the meeting</h3>
+        <p class="m-0 mb-5 c-grey">attend the project business analysis meeting</p>
+    </div>
+    <i class="fa-regular fa-trash-can delete"></i>
+</div>
+<div class="task-row d-flex space-between align-center">
+    <div class="info">
+        <h3 class=" mt-0 mb-5 fs-14">finish lesson</h3>
+        <p class="m-0 mb-5 c-grey">finish teaching flex box</p>
+    </div>
+    <i class="fa-regular fa-trash-can delete"></i>
+  </div>
+</div>
+<!-- End Tasks Widget -->
+<!-- Start Top Search  -->
+<div class="search-items p-20 br-10 bg-white tt-c">
+<h2 class="mt-0 mb-10">Top Search Items</h2>
+<div class="items-head d-flex space-between c-grey">
+    <div>keyword</div>
+    <div>search count</div>
+</div>
+<div class="items d-flex space-between fs-15 pt-15 pb-15">
+    <span>programming</span>
+    <span class="bg-pink fs-14 btn-shape c-white">220</span>
+</div>
+<div class="items d-flex space-between fs-15 pt-15 pb-15">
+    <span>javascript</span>
+    <span class="bg-pink fs-14 btn-shape c-white">180</span>
+</div>
+<div class="items d-flex space-between fs-15 pt-15 pb-15">
+    <span>php</span>
+    <span class="bg-pink fs-14 btn-shape c-white">160</span>
+</div>
+<div class="items d-flex space-between fs-15 pt-15 pb-15">
+    <span>code</span>
+    <span class="bg-pink fs-14 btn-shape c-white">145</span>
+</div>
+<div class="items d-flex space-between fs-15 pt-15 pb-15">
+    <span>code</span>
+    <span class="bg-pink fs-14 btn-shape c-white">145</span>
+</div>
+<div class="items d-flex space-between fs-15 pt-15 pb-15">
+    <span>design</span>
+    <span class="bg-pink fs-14 btn-shape c-white">195</span>
+</div>
+</div>
+<!-- End Top Search  -->
+<!-- start uplode  -->
+<div class="uploade bg-white p-20 br-6 tt-c">
+    <h2 class=" mt-0 mb-10">lastet uploads</h2>
+    <ul class="m-0">
+        <li class="space-between pb-10 pt-10 ">
+<div class="d-flex align-center">
+    <img class="mr-10" src="imgs/pdf.svg" alt="">
+    <span>
+        <span>My-File.pdf</span>
+        <span class="d-block c-grey fs-14">hawraa</span>
+    </span>
+</div>
+<div class="btn-shape bg-pink c-white button">17mb</div>
+        </li>
+        <li class="space-between pb-10 pt-10 ">
+            <div class="d-flex align-center">
+                <img class="mr-10" src="imgs/avi.svg" alt="">
+                <span>
+                    <span>My-video-File.avi</span>
+                    <span class="d-block c-grey fs-14">hawraa</span>
+                </span>
+            </div>
+            <div class="btn-shape bg-pink c-white fs-14 w-fit button">20mb</div>
+        </li>
+        <li class="space-between pb-10 pt-10 ">
+            <div class="d-flex align-center">
+                <img class="mr-10" src="imgs/psd.svg" alt="">
+                <span>
+                    <span>My-psd.pdf</span>
+                    <span class="d-block c-grey fs-14">hawraa</span>
+                </span>
+            </div>
+            <div class="btn-shape bg-pink c-white fs-14 w-fit button">26mb</div>
+        </li>
+        <li class="space-between pb-10 mb-10 ">
+            <div class="d-flex align-center">
+                <img class="mr-10" src="imgs/zip.svg" alt="">
+                <span>
+                    <span>My-zib-File.pdf</span>
+                    <span class="d-block c-grey fs-14">hawraa</span>
+                </span>
+            </div>
+            <div class="btn-shape bg-pink c-white fs-14 w-fit button">2mb</div>
+        </li>
+        <li class="space-between pb-10 pt-10 ">
+        <div class="d-flex align-center">
+            <img class="mr-10" src="imgs/dll.svg" alt="">
+            <span>
+                <span>My-dell-File.pdf</span>
+                <span class="d-block c-grey fs-14">hawraa</span>
+            </span>
+        </div>
+        <div class="btn-shape bg-pink c-white fs-14 w-fit button">30mb</div>
+        </li>
+        <li class="space-between pb-10 pt-10 ">
+            <div class="d-flex align-center">
+                <img class="mr-10" src="imgs/eps.svg" alt="">
+                <span>
+                    <span>My-eps-File.pdf</span>
+                    <span class="d-block c-grey fs-14">hawraa</span>
+                </span>
+            </div>
+            <div class="btn-shape bg-pink c-white fs-14 w-fit button">20mb</div>
+        </li>
+    </ul>
+</div>
+<!-- End uplode  -->
+
+</div>
+
 </div>
 </div>
 </div>
