--- a/index.html
+++ b/index.html
@@ -451,7 +451,6 @@
 </div>
 <!--End Lastet post Widget -->
 <!-- start social media stats widget -->
-<!-- Start social media stats widget -->
 <div class="social-media br-10 bg-white p-20 tt-c">
     <h2 class="mt-0 mb-20">Social Media Stats</h2>
 <div class="box twitter p-15 space-between relative mb-10">
@@ -476,8 +475,89 @@
             </div>
 </div>
 <!-- End socail media stats widget -->
-
 </div>
+<!-- start projects table -->
+<div class="projects p-20 bg-white txt-c br-10 m-20 tt-c">
+<h2 class="mt-0 mb-20">projects</h2>
+<div class="responsive-table">
+    <table class="fs-14 w-full">
+<thead>
+    <tr>
+        <td>name</td>
+        <td>finish date</td>
+        <td>client</td>
+        <td>price</td>
+        <td>team</td>
+        <td>status</td>
+    </tr>
+    <tbody>
+        <tr>
+            <td>kaspar</td>
+            <td>10 may 2021</td>
+            <td>hasan</td>
+            <td>1000$</td>
+            <td>
+                <img src="imgs/team-01.png" alt="">
+                <img src="imgs/team-02.png" alt="">
+                <img src="imgs/team-03.png" alt="">
+                <img src="imgs/team-05.png" alt="">
+            </td>
+            <td>
+<span class="lable c-white bg-pink btn-shape ">pending</span>
+            </td>
+        </tr>
+        <tr>
+            <td>khodor site</td>
+            <td>01 may 2022</td>
+            <td>khodor</td>
+            <td>2000$</td>
+            <td>
+                <img src="imgs/team-01.png" alt="">
+                <img src="imgs/team-02.png" alt="">
+                <img src="imgs/team-04.png" alt="">
+
+            </td>
+            <td>
+<span class="lable c-white bg-orange btn-shape ">pending</span>
+            </td>
+        </tr>
+        <tr>
+            <td>hawraa site</td>
+            <td>10 october 2023</td>
+            <td>hawraa</td>
+            <td>1000$</td>
+            <td>
+                <img src="imgs/team-02.png" alt="">
+                <img src="imgs/team-03.png" alt="">
+                <img src="imgs/team-04.png" alt="">
+                <img src="imgs/team-05.png" alt="">
+            </td>
+            <td>
+<span class="lable c-white bg-blue btn-shape ">pending</span>
+            </td>
+        </tr>
+        <tr>
+            <td>economic site</td>
+            <td>10 nov 2020</td>
+            <td>ali</td>
+            <td>30,000$</td>
+            <td>
+                <img src="imgs/team-01.png" alt="">
+                <img src="imgs/team-02.png" alt="">
+                <img src="imgs/team-03.png" alt="">
+                <img src="imgs/team-04.png" alt="">
+            </td>
+            <td>
+<span class="lable c-white bg-red btn-shape ">pending</span>
+            </td>
+        </tr>
+
+    </tbody>
+</thead>
+    </table>
+</div>
+</div>
+<!-- end projects table -->
 </div>
 </div>
 </div>
