--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </a>
             </li>
             <li>
-                <a href="index.html">
+                <a href="settings.html">
                     <i class="fa-solid fa-gear fa-fw"></i>
                     <span class="hide-mobile">settings</span>
                 </a>
@@ -78,7 +78,7 @@
 <!-- start head -->
 <div class="head bg-white p-15 space-between">
     <div class="search relative">
-     <input class="p-20 br-10 border-1" type="search" placeholder="Type a Keyword">
+     <input class="p-20 br-10 border-ccc" type="search" placeholder="Type a Keyword">
     </div>
     <div class="icons align-center">
 <span class="notifications relative">
@@ -113,9 +113,9 @@
     <h2 class=" mt-0 mb-10">quick draft</h2>
     <p class="c-grey mt-0 mb-20 fs-15 ">Write A Draft For Your Ideas</p>
     <form action="" class="">
-        <input class="d-block br-6 p-10 mb-20 br-none w-full bg-grey" type="text" placeholder="Title">
-        <textarea class="d-block br-6 p-10 mb-20 br-none w-full bg-grey" placeholder="Your Thoughts"></textarea>
-        <input type="submit" value="save" class="save d-block c-white bg-pink br-none w-fit fs-14 btn-shape">
+        <input class="d-block br-6 p-10 mb-20 border-none w-full bg-grey" type="text" placeholder="Title">
+        <textarea class="d-block br-6 p-10 mb-20 border-none w-full bg-grey" placeholder="Your Thoughts"></textarea>
+        <input type="submit" value="save" class="save d-block c-white bg-pink border-none w-fit fs-14 btn-shape">
     </form>
 </div>
 <!-- End Quick Draft Widget -->
