--- a/index.html
+++ b/index.html
@@ -36,37 +36,37 @@
                 </a>
             </li>
             <li>
-                <a href="index.html">
+                <a href="profile.html">
                     <i class="fa-solid fa-user fa-fw"></i>
                     <span class="hide-mobile">profile</span>
                 </a>
             </li>
             <li>
-                <a href="index.html">
+                <a href="projects.html">
                     <i class="fa-solid fa-diagram-project fa-fw"></i>
                     <span class="hide-mobile">projects</span>
                 </a>
             </li>
             <li>
-                <a href="index.html">
+                <a href="courses.html">
                     <i class="fa-solid fa-graduation-cap fa-fw"></i>
                     <span class="hide-mobile">courses</span>
                 </a>
             </li>
             <li>
-                <a href="index.html">
+                <a href="friends.html">
                     <i class="fa-solid fa-user-friends fa-fw"></i>
                     <span class="hide-mobile">friends</span>
                 </a>
             </li>
             <li>
-                <a href="index.html">
+                <a href="files.html">
                     <i class="fa-solid fa-file fa-fw"></i>
                     <span class="hide-mobile">Files</span>
                 </a>
             </li>
             <li>
-                <a href="index.html">
+                <a href="plan.html">
                     <i class="fa-solid fa-credit-card fa-fw"></i>
                     <span class="hide-mobile">plans</span>
                 </a>
@@ -92,7 +92,7 @@
 <div class="wrapper d-grid gap-20">
     <!-- Start Welcome Widget -->
     <div class="welcome bg-white br-10 txt-c-mobile block-mobile ">
-        <div class="intro bg-pink-alt p-20 d-flex space-between ">
+        <div class="intro bg-pink p-20 d-flex space-between ">
             <div>
                 <h2 class="m-0 tt-c">welcome</h2>
                 <p class="c-grey mt-5 tt-c">elzero</p>
@@ -170,6 +170,7 @@
         </div>
 </div>
 <!--End Targets Widget  -->
+
 <!-- Start Tickets Widget  -->
 <div class="tickets p-20 bg-white br-10 tt-c">
     <h2 class=" mt-0 mb-10">Tickets Statistics</h2>
@@ -475,6 +476,55 @@
             </div>
 </div>
 <!-- End socail media stats widget -->
+<!-- start activities widget  -->
+<div class="activities p-20 bg-white br-10 tt-c">
+    <h2 class=" mt-0 mb-10">My Activities</h2>
+    <p class="c-grey mt-0 mb-20 fs-15 ">My Latest Activities</p>
+<div class="container d-flex">
+<div class="time">08:42</div>
+<div class="icon c-pink">
+    <i class="fa fa-genderless success fa-lg danger"></i>
+</div>
+<p>Make deposit USD 700. to ESL</p>
+</div>
+<div class="container d-flex">
+    <div class="time">09:12</div>
+    <div class="icon c-orange">
+        <i class="fa fa-genderless success fa-lg danger"></i>
+    </div>
+    <p>Make deposit USD 700. to ESL</p>
+    </div>
+    <div class="container d-flex">
+        <div class="time">08:20</div>
+        <div class="icon c-blue">
+            <i class="fa fa-genderless success fa-lg danger"></i>
+        </div>
+        <p>Make deposit USD 700. to ESL</p>
+        </div>
+        <div class="container d-flex">
+            <div class="time">10:32</div>
+            <div class="icon c-green">
+                <i class="fa fa-genderless success fa-lg danger"></i>
+            </div>
+            <p>Make deposit USD 700. to ESL</p>
+            </div>
+            <div class="container d-flex">
+                <div class="time">07:51</div>
+                <div class="icon c-orange">
+                    <i class="fa fa-genderless success fa-lg danger"></i>
+                </div>
+                <p>Make deposit USD 700. to ESL</p>
+                </div>
+                <div class="container d-flex">
+                    <div class="time">21:40</div>
+                    <div class="icon c-pink">
+                        <i class="fa fa-genderless success fa-lg danger"></i>
+                    </div>
+                    <p>Make deposit USD 700. to ESL</p>
+                    </div>
+</div>
+<!-- end activities widget  -->
+
 </div>
 <!-- start projects table -->
 <div class="projects p-20 bg-white txt-c br-10 m-20 tt-c">
@@ -558,7 +608,6 @@
 </div>
 </div>
 <!-- end projects table -->
-</div>
 </div>
 </div>
 </body>
