--- a/settings.html
+++ b/settings.html
@@ -245,6 +245,10 @@
                 Sigma
               </label>
             </div>
-
+        </div>
+    </div>
+    </div>
+        </div>
+    </div>
 </body>
 </html>
