--- a/plan.html
+++ b/plan.html
@@ -90,7 +90,7 @@
 <!-- end head -->
 <h1 class="relative">plan</h1>
 <div class="plans-page gap-20 d-grid m-20">
-    <div class="plan pink bg-white tt-c p-20">
+    <div class="plan pink bg-white tt-c p-20 br-6">
         <div class="top bg-pink txt-c p-20">
         <h2 class="m-0 c-white">free</h2>
       
@@ -143,8 +143,8 @@
         </ul>
         <a href="#" class="btn-shape bg-pink c-white">joind</a>
     </div>
-    <div class="plan blue bg-white tt-c p-20">
-        <div class="top bg-blue txt-c p-20">
+    <div class="plan blue bg-white tt-c p-20 br-6">
+        <div class="top bg-blue txt-c p-20 br-6">
         <h2 class="m-0 c-white">basic</h2>
       
         <div class="price c-white ">
@@ -180,7 +180,7 @@
             </li>
             <li>
                 <i class="fa-solid fa-check fa-fw yes"></i>
-                <span> Earn Certificate</span>
+                <span>Earn Certificate</span>
                 <i class="fa-solid fa-circle-info help"></i>
             </li>
             <li>
@@ -232,7 +232,7 @@
                 <i class="fa-solid fa-circle-info help"></i>
             </li>
             <li>
-                <i class="fa-solid fa-check fa-fw yes"></i>>
+                <i class="fa-solid fa-check fa-fw yes"></i>
                 <span> Earn Certificate</span>
                 <i class="fa-solid fa-circle-info help"></i>
             </li>
